fix: adjusting collapsed overview map button

--- a/scss/os/_overrides_openlayers.scss
+++ b/scss/os/_overrides_openlayers.scss
@@ -224,6 +224,11 @@
   display: none;
 }
 
+.ol-overviewmap.ol-collapsed {
+  border: unset;
+  margin-right: 1.5em;
+}
+
 // Scale Line
 .ol-scale-line {
   bottom: .75rem;
